--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
 
-        <video controls autoplay muted loop>
+        <video autoplay muted loop>
             <source src="video/concierto.mp4"  type="video/mp4" >
             <source src="video/concierto.ogg"  type="video/ogg" >
             <source src="video/concierto.webm"  type="video/webm" >
@@ -189,6 +189,6 @@
     </footer>
 
     <!------Script--------->
-    <script type="text/javascript" src="build/js/bundle.js"></script>
+    <script type="text/javascript" src="build/js/bundle.min.js"></script>
 </body>
 </html>
